kubernetes/applications/bazarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: apps
spec:
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr:1.6.2@sha256:8b30e81c4aec2991f469e78fae8afaa89ecc9b21a80e3897f50427216b55470c
          volumeMounts:
            - name: config
              mountPath: /config
            - name: film
              mountPath: /movies
            - name: serie-tv
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 20m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr
        - name: film
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/film
        - name: serie-tv
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/serie-tv
        - name: downloads
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/downloads
