kubernetes/applications/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: 6767
  selector:
    app: bazarr
