kubernetes/applications/bazarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-route
  namespace: apps
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "bazarr.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
